Atualizei o css do index

--- a/Algoritmos/PrototipoSite.html
+++ b/Algoritmos/PrototipoSite.html
@@ -64,7 +64,7 @@
         <div class="circulos">
             <div class="circulo1">
                 <img src="./Imagens/Vector.png" alt="" height="50px">
-            
+
             </div>
             <div class="circulo2">
                 <img src="./Imagens/Vector (1).png" alt="" height="40px">
@@ -93,7 +93,8 @@
             <div class="bloco3">
                 <h2> Decisão Estratégica</h2>
                 <div class="textoh3">
-                    <h3>Com dashboards intuitivos, gestores tomam decisões rápidas para evitar perdas e otimizar a armazenagem</h3>
+                    <h3>Com dashboards intuitivos, gestores tomam decisões rápidas para evitar perdas e otimizar a
+                        armazenagem</h3>
                 </div>
             </div>
 
@@ -103,26 +104,30 @@
     </div>
 
     <div class="div_mae">
-        <div class="decor">
-            <img src="./Imagens/forma topo.png" alt="" width="100%" height="50%">
+
+        <div class="container_mae">
+
+            <h1 class="h1_mae">Simulação</h1>
+            <img class="topo" src="./Imagens/forma topo.png">
+
+
         </div>
 
+        <h1 class="titulo3">Entre em contato</h1>
 
+        <div class="dados">
 
+            <input class="nome" type="text" placeholder="Nome">
 
+            <input class="email" type="text" placeholder="Email">
 
-
-
-
-
-
+            <input class="mensagem" type="text" placeholder="Digite sua mensagem">
+        </div>
 
     </div>
+
+
+
 </body>
-
-
-
-
-
 
 </html>
