Atualizando css do index

--- a/Algoritmos/PrototipoSite.html
+++ b/Algoritmos/PrototipoSite.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <title>Protótipo do Site GrãoSafe </title>
 
 </head>
@@ -122,7 +123,37 @@
             <input class="email" type="text" placeholder="Email">
 
             <input class="mensagem" type="text" placeholder="Digite sua mensagem">
+
+            <button class="enviar" onclick="enviar()">Enviar</button>
         </div>
+
+
+
+    </div>
+
+    <div class="final">
+
+        <div class="container_fundo">
+
+            <div class="container_final_direito">
+                <h1 class="graosafe">GrãoSafe</h1>
+                <h4 class="frasefinal">Monitorando silos e minimizando perdas!</h4>
+            </div>
+
+            <div class="container_final_meio">
+                <h2 class="frasefinal">Já é cliente?</h2>
+                <h4 class="frasefinal">Faça login</h4>
+                <h4 class="frasefinal">Suporte</h4>
+            </div>
+
+            <div class="container_final_esquerdo">
+                <h2 class="frasefinal">Contato</h2>
+                <h4 class="frasefinal">jijijijjj</h4>
+            </div>
+
+        </div>
+
+
 
     </div>
 
