Alterando delay do arduino IDE e criando SELECT de banco de dados

--- a/Algoritmos/PrototipoSite.html
+++ b/Algoritmos/PrototipoSite.html
@@ -18,8 +18,8 @@
         <img src="./Imagens/GraoSafe.png" class="img">
     </div>
 
-    <div class="login border login-button" onclick="login()">
-        <span style="color: #FAF2FF; pointer-events:none;"><b>Login</b></span>
+    <div class="login border login-button">
+        <a href="login/login.html" style="color: #FAF2FF;">Login</a>
     </div>
 
     <div class="navbar">
