Organizei as pastas e os links de css e html

--- a/Algoritmos/Site-Institucional/html/calculadora.html
+++ b/Algoritmos/Site-Institucional/html/calculadora.html
@@ -22,8 +22,8 @@
     <div class="navbar">
         <b>
             <a href="./home.html"><span>Home</span></a>
-            <a href="#O Sensor"><span>O Sensor</span></a>
-            <a href="#"><span>Simulação</span></a>
+            <a href="#"><span>O Sensor</span></a>
+            <a href="./calculadora.html"><span>Simulação</span></a>
             <a href="#"><span>Contato</span></a>
         </b>
     </div>
