--- a/Algoritmos/Site-Institucional/html/home.html
+++ b/Algoritmos/Site-Institucional/html/home.html
@@ -28,9 +28,9 @@
 
     <div class="navbar">
         <b>
-            <a href="C:\Users\kauan\OneDrive\Documentos\Sprint 2\Protótipo Site"><span class="tsize">Home</span></a>
-            <a href="#O Sensor"><span class="tsize">Sensor</span></a>
-            <a href="#"><span class="tsize">Simulação</span></a>
+            <a href="./home.html"><span class="tsize">Home</span></a>
+            <a href="#"><span class="tsize">Sensor</span></a>
+            <a href="./calculadora.html"><span class="tsize">Simulação</span></a>
             <a href="#"><span class="tsize">Contato</span></a>
         </b>
     </div>
