--- a/Algoritmos/Site-Institucional/html/login.html
+++ b/Algoritmos/Site-Institucional/html/login.html
@@ -36,7 +36,7 @@
                                           <input id="senha_input" type="password" placeholder="Digite sua senha"> 
                                         </div> 
 
-                                        <a href="esqueci.html" class="esqueci">Esqueci minha senha</a> 
+                                        <a href="senha.html" class="esqueci">Esqueci minha senha</a> 
 
                                         <button class="botao">Entrar</button> 
                                         <div class="campo"> 
