--- a/Algoritmos/Site-Institucional/html/registro.html
+++ b/Algoritmos/Site-Institucional/html/registro.html
@@ -35,7 +35,12 @@
 
                                           <div class="campo"> 
                                             <span id="span_email"><div id="div_email_verify" class="verify-text"></div>E-mail:</span> 
-                                            <input id="input_email" type="text" placeholder="Digite sua senha"> 
+                                            <input id="input_email" type="text" placeholder="Digite sua email"> 
+                                          </div> 
+
+                                          <div class="campo"> 
+                                            <span id="span_senha"><div id="div_senha_verify" class="verify-text"></div>Senha:</span> 
+                                            <input id="input_senha" type="text" placeholder="Digite sua email"> 
                                           </div> 
                                           
                                         <div class="campo"> 
