--- a/Algoritmos/Site-Prototipos/home.html
+++ b/Algoritmos/Site-Prototipos/home.html
@@ -29,8 +29,8 @@
     <div class="navbar">
         <b>
             <a href="./home.html"><span class="tsize">Home</span></a>
-            <a href="#O Sensor"><span class="tsize">Sensor</span></a>
-            <a href="./CalculadoraFinanc.html"><span class="tsize">Simulação</span></a>
+            <a href="#"><span class="tsize">Sensor</span></a>
+            <a href="./html/calculadora.html"><span class="tsize">Simulação</span></a>
             <a href="#"><span class="tsize">Contato</span></a>
         </b>
     </div>
