--- a/Algoritmos/Site-Oficial/html/home-login.html
+++ b/Algoritmos/Site-Oficial/html/home-login.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    <title>Protótipo do Site GrãoSafe </title>
+    <title>GrãoSafe</title>
 
 </head>
 
@@ -29,7 +29,6 @@
     <div class="navbar">
         <b>
             <a href="./home.html"><span class="tsize">Home</span></a>
-            <a href="#"><span class="tsize">Sensor</span></a>
             <a href="./calculadora.html"><span class="tsize">Simulação</span></a>
             <a href="#"><span class="tsize">Contato</span></a>
         </b>
@@ -104,6 +103,7 @@
                     <h3>Com dashboards intuitivos, gestores tomam decisões rápidas para evitar perdas e otimizar a
                         armazenagem</h3>
                 </div>
+                
             </div>
 
 
@@ -113,7 +113,6 @@
 
     <div class="div_mae">
         <img class="topo" src="../Imagens/forma topo.png">
-        <h1 class="h1_mae">Simulação</h1>
         <div class="container_mae">
 
             
@@ -146,26 +145,8 @@
                 <h1 class="graosafe">GrãoSafe</h1>
                 <h4 class="frasefinal">Monitorando silos e minimizando perdas!</h4>
             </div>
-
-            <div class="container_final_meio">
-                <h2 class="frasefinal">Já é cliente?</h2>
-                <h4 class="frasefinal">Faça login</h4>
-                <h4 class="frasefinal">Suporte</h4>
-            </div>
-
-            <div class="container_final_esquerdo">
-                <h2 class="frasefinal">Contato</h2>
-                <h4 class="frasefinal">jijijijjj</h4>
-            </div>
-
         </div>
-
-
-
     </div>
 
-
-
 </body>
-
 </html>
