--- a/Algoritmos/Site-Oficial/html/senha.html
+++ b/Algoritmos/Site-Oficial/html/senha.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login-registro.css">
-    <title>Document</title>
+    <script src="../javascript/login-reistro.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <title>Faça seu login!</title>
 </head>
 <body>
-                <div class="container img-bg">
+                <div class="container">
+                  <div class="img-bg">
+                  </div>
                   <div class="coluna">
                     <div class="container-login">
 
