--- a/Algoritmos/Site-Oficial/html/senha.html
+++ b/Algoritmos/Site-Oficial/html/senha.html
@@ -26,13 +26,17 @@
                               <div class="card card-login"> 
                                 <h2>Crie a Sua Senha!</h2> 
                         
-                                <div class="formulario"> 
+                                <div class="formulario">
                                   <div class="campo"> 
-                                    <span>Insira uma Senha:</span> 
+                                    <span>Email para recuperação de senha:</span> 
+                                    <input id="input_senha1" type="text" placeholder="Digite seu email"> 
+                                  </div>
+                                  <div class="campo"> 
+                                    <span>Insira uma nova Senha:</span> 
                                     <input id="input_senha1" type="password" placeholder="Digite sua senha"> 
                                   </div> 
                                   <div class="campo"> 
-                                    <span>Repetir Senha:</span> 
+                                    <span>Repetir nova Senha:</span> 
                                     <input id="input_senha2" type="password" placeholder="Digite sua senha"> 
                                   </div> 
                                   <button class="botao">Registrar</button> 
