Atualizando validações de texto e trocando a fonte do site

--- a/Algoritmos/Site-Oficial/html/home.html
+++ b/Algoritmos/Site-Oficial/html/home.html
@@ -28,7 +28,7 @@
         <b>
             <a href="./home.html"><span class="tsize">Home</span></a>
             <a href="./calculadora.html"><span class="tsize">Simulação</span></a>
-            <a href="./home.html"><span class="tsize">Contato</span></a>
+            <a href="./home.html"><span class="tsize" >Contato</span></a>
         </b>
     </div>
 
@@ -59,9 +59,9 @@
     <div class="contato"></div>
 
 
-    <div><a class="botao" onclick="document.getElementById('contato').scrollIntoView({ behavior: 'smooth' })">
+    <div><button class="botao" onclick="document.getElementById('contato').scrollIntoView({ behavior: 'smooth' })">
             Contato
-    </a></div>
+        </button></div>
 
     <div class="div_pai">
 
