--- a/Algoritmos/Site-Oficial/html/dashboard.html
+++ b/Algoritmos/Site-Oficial/html/dashboard.html
@@ -20,7 +20,7 @@
             </div>
             <div class="sidebar"> 
                 <div class="usuario">
-                    <img src="../Imagens/usuario2.png" class="img">
+                    <img src="../Imagens/usuario.png" class="img">
                 </div>
                 <div class="navbar-log">
                 <b>
