--- a/Algoritmos/Site-Oficial/html/registro.html
+++ b/Algoritmos/Site-Oficial/html/registro.html
@@ -143,7 +143,14 @@
       }).showToast();
     }
     else {
-      window.location.href = "./home-login.html";
+      Toastify({
+      text: "Cadastro realizado com sucesso!",
+      duration: 3000,
+      style: {
+      background: "linear-gradient(to right,  #3CB371, #00FF7F)",
+        },
+      }).showToast();
+      window.location.href = "#";
     }
   }
 
