Script Oficial de BD e alterações finais do site para apresentação

--- a/Algoritmos/Site-Oficial/html/dashboard.html
+++ b/Algoritmos/Site-Oficial/html/dashboard.html
@@ -23,15 +23,15 @@
                 </div>
                 <div class="navbar-log">
                 <b>
-                <a href="dashboard.html"><span class="tsize1" style="color: #0A5436;">Dashboards</span></a>
-                <a href="#"><span class="tsize2" style="color: #0A5436;">Sensores</span></a>
-                <a href="#"><span class="tsize3" style="color: #0A5436;">Notificações</span></a>
+                <a href="dashboard.html"><span class="tsize1">Dashboards</span></a>
+                <a href="#"><span class="tsize2">Sensores</span></a>
+                <a href="#"><span class="tsize3">Notificações</span></a>
                 </b>
             </div>
             
             <div class="sair">
                 <b>
-                <a href="home.html"><span class="tsize" style="color: red;">Sair</span></a>
+                <a href="home.html"><span class="tsize">Sair</span></a>
                 </b>
             </div>
         </div>
