--- a/Algoritmos/Site-Oficial/html/senha.html
+++ b/Algoritmos/Site-Oficial/html/senha.html
@@ -135,7 +135,7 @@
       background: "linear-gradient(to right, #3CB371, #00FF7F)",
         },
       }).showToast();
-      window.location.href = "./dashboard.html";
+      window.location.href = "./login.html";
     }
     
     div_mensagem.innerHTML = mensagem;
