--- a/Algoritmos/Site-Oficial/html/registro.html
+++ b/Algoritmos/Site-Oficial/html/registro.html
@@ -49,7 +49,8 @@
 
             <div class="campo">
               <span id="span_senha">
-                <div id="div_senha_verify" class="verify-text"></div>Senha:
+                <div id="div_senha_verify" class="verify-text"></div>Senha: <br>
+                Senha deve conter caracteres especiais. ("!", "@", "#", "_", "-", ".")
               </span>
               <input id="input_senha" type="text" placeholder="Digite sua senha"><br>
               <div id="senhaCarac"></div>
